---------------------------------
MUI NList MCC classes - ChangeLog
---------------------------------

$Id$
$Source$

2004-07-27  Jens Langner <Jens.Langner@light-speed.de>

    * mccheader.c: updated the general mcc source file to the
      latest version also used with other .mcc's out there. Also
      adapted all library.c files to define the USEDCLASSES stuff
      correctly.

2004-07-16  Jens Langner <Jens.Langner@light-speed.de>

    * gcc3: adapted all sources to be more gcc3 compliant. Removed
      all remaining warnings in -Wall mode. Please note that at
      least for the AmigaOS4 port of the classes gcc 3.4.1 should
      be considered the default compiler now.

2004-07-03  Jens Langner <Jens.Langner@light-speed.de>

    * nlisttree_mcp: added the missing mcp class of the nlisttree
      class and ported it to native OS4 aswell.

2004-07-01  Jens Langner <Jens.Langner@light-speed.de>

    * all: built some first OS4/PPC native versions of all classes
      and added makefiles for it accordingly.
    * all: fixed all remaining compiler warnings which occurred
      with -Wall.
    * all: updated and reorganized all NList classes to use the
      SDI_*.h header files to make it way easier to maintain the
      source code for different operating systems like OS4 and MOS.

2003-02-25  Jens Langner <Jens.Langner@light-speed.de>

    * NList.mcc: fixed bug in the Draw method were it could have
      happened that on a LAYERSREFRESH request the object wasn`t
      correctly refreshed.

2003-02-24  Jens Langner <Jens.Langner@light-speed.de>

    * added USEDCLASSES and USEDCLASSESP to all NList related
      classes so that the preferences/superclass ordering is
      a bit more accurate.

2003-02-12  Jens Langner <Jens.Langner@light-speed.de>

    * NList.mcc: added new MUIV_NList_Insert_Flag_Raw flag to
      the MUIM_NList_Insert method. With this special flag the
      developer is able to insert a bunch of data into a NList